istio/shipping-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shipping-vs
spec:
  hosts:
  - "*"
  gateways:
  - ecommerce-gateway
  http:
  - match:
    - uri:
        exact: /shipping
    route:
    - destination:
        host: shipping-service
        port:
          number: 3001
